# worth

./: .credo.exs  .formatter.exs  .gitignore  BACKLOG.md  CHANGELOG_0.2.0.md  CLAUDE.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  build.sh  mix.exs  worth_test.db
rel/desktop/src-tauri/: Cargo.toml  dist_splash.html  splash.html  tauri.conf.json
rel/desktop/src-tauri/icons/: icon.icns
rel/desktop/src-tauri/rel/lib/agent_ex-0.1.0/ebin/: Elixir.AgentEx.AgentProtocol.CLI.beam  Elixir.AgentEx.LLM.Catalog.beam  Elixir.AgentEx.LLM.ErrorClassifier.beam  Elixir.AgentEx.LLM.Provider.Anthropic.beam  Elixir.AgentEx.LLM.Provider.Groq.beam  Elixir.AgentEx.LLM.RateLimit.beam  Elixir.AgentEx.LLM.Response.beam  Elixir.AgentEx.LLM.Transport.Ollama.beam  Elixir.AgentEx.LLM.Transport.beam  Elixir.AgentEx.LLM.UsageWindow.beam  Elixir.AgentEx.Loop.Context.beam  Elixir.AgentEx.Loop.Stages.CommitmentGate.beam  Elixir.AgentEx.Loop.Stages.ContextGuard.beam  Elixir.AgentEx.Loop.Stages.HumanCheckpoint.beam  Elixir.AgentEx.Loop.Stages.PlanTracker.beam  Elixir.AgentEx.Loop.Stages.ProgressInjector.beam  Elixir.AgentEx.ModelRouter.Analyzer.beam  Elixir.AgentEx.Persistence.Knowledge.Local.beam  (+15 more)
rel/desktop/src-tauri/rel/releases/0.1.0/: env.bat  env.sh  runtime.exs  start_clean.boot
rel/desktop/src-tauri/release/releases/: COOKIE  start_erl.data
rel/desktop/src-tauri/release/releases/0.1.0/: desktop.rel  elixir.bat  env.sh  runtime.exs  start.boot  start.script  start_clean.boot  start_clean.script  sys.config  vm.args
rel/desktop/src-tauri/src/: lib.rs  main.rs  metrics.rs
(+3211 files in other folders)
