[package]
name = "worth-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
base64 = "0.22"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = false
debug = false
strip = true

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,--reduce-memory-overheads"]
